MODORDERS-905 fixed comments